# const-exhaustive

./: Cargo.toml  README.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  rust.yml
crates/const-exhaustive/: Cargo.toml
crates/const-exhaustive-derive/: Cargo.toml
crates/const-exhaustive-derive/src/: lib.rs
crates/const-exhaustive/src/: array.rs  lib.rs  util.rs
crates/const-exhaustive/tests/: derive.rs  hygiene.rs  impls.rs
