[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["aecsocket <aecsocket@tutanota.com>"]
categories = ["no-std", "rust-patterns"]
edition = "2021"
keywords = ["const"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aecsocket/const-exhaustive"
rust-version = "1.83.0"
version = "0.1.1"

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(docsrs_dep)"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
unwrap_used = "warn"

[workspace.dependencies]
const-exhaustive-derive = { version = "0.1.0", path = "crates/const-exhaustive-derive" }

const-default = { version = "1.0.0", default-features = false }
generic-array = { version = "1.1.0", default-features = false, features = [
  "const-default",
] }
typenum = "1.17.0"
variadics_please = { version = "1.0.0", default-features = false }

proc-macro2 = "1.0.88"
quote = "1.0.37"
syn = "2.0.79"
