[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.83.0"
repository = "https://github.com/aecsocket/const-exhaustive"
license = "MIT OR Apache-2.0"
keywords = ["const"]
categories = ["no-std", "rust-patterns"]

[workspace.dependencies]
const-default = { version = "1.0.0", default-features = false }
const-exhaustive-derive = { path = "crates/const-exhaustive-derive", version = "0.1.1" }
generic-array = { version = "1.3.5", default-features = false, features = [
  "const-default",
] }
proc-macro2 = "1.0.88"
quote = "1.0.37"
syn = "2.0.79"
typenum = "1.19.0"
variadics_please = { version = "1.1.0", default-features = false }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
unwrap_used = "warn"

[workspace.lints.rust]
missing_docs = "warn"
# <https://github.com/bevyengine/bevy/pull/14703>
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(docsrs_dep)"] }
