[package]
description = "Enumerate all values of a type at compile time"
name = "const-exhaustive"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
const-exhaustive-derive = { workspace = true }

const-default = { workspace = true }
generic-array = { workspace = true }
typenum = { workspace = true }
variadics_please = { workspace = true }
